k8s/bes/slskd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: media
spec:
  selector:
    app: slskd
  ports:
    - port: 5030
      targetPort: 5030
