k8s/bes/slskd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slskd
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`slskd.sw1a1aa.uk`)
      kind: Rule
      services:
        - name: slskd
          port: 5030
  tls:
    certResolver: letsencrypt
